# helion-risk-world

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
configs/: backtest_banknifty.yaml  data_sources.yaml  model_medium.yaml  model_small.yaml  paper_trading.yaml  risk_profiles.yaml  tune_v1.yaml  tune_v1_legacy.yaml  v1.yaml  v1_1min_h120.yaml  v1_h48.yaml  v1_h48_decomposed.yaml  v1_h48_frac25.yaml  v1_h48_frac50.yaml  v1_h48_frac75.yaml  v1_h48_ooddiag.yaml  v1_h48_repr0.yaml  v1_h48_repr03.yaml  v1_h48_reprtune.yaml  v1_h48_reprtune2.yaml  v1_more_epochs.yaml
docs/: ablation_plan.md  architecture.md  backtesting_plan.md  data_sources.md  execution_reality.md  failure_modes.md  feature_engineering.md  investigation_log.md  review_2026-07-01.md  risk_management.md  training_plan.md
notebooks/: 01_data_exploration.ipynb  02_feature_validation.ipynb  03_model_diagnostics.ipynb  04_backtest_analysis.ipynb
scripts/: _backtest_runtime.py  _bootstrap.py  _common.py  assemble_data.py  audit_local_data.py  backtest.py  build_features.py  calibrate.py  feature_ic_diagnostic.py  generate_report.py  label.py  paper_trade.py  predict.py  train.py  train_workflow.py  validate_data.py
tests/: conftest.py  test_alpha_labels.py  test_assemble_data.py  test_backtest_engine.py  test_backtest_runtime_artifacts.py  test_barrier_context.py  test_barrier_vol_heads.py  test_calibrate_script.py  test_calibration_gate.py  test_checkpoint_metrics.py  test_cli_smoke.py  test_config_loaders.py  test_config_validation.py  test_contiguity.py  test_cost_model.py  test_cross_asset_encoder.py  test_daily_context_loader.py  test_data_capability_profile.py  test_data_pipeline.py  test_data_quality.py  test_ensemble_quantiles.py  test_execution_positioning.py  test_execution_reality.py  test_feature_builder.py  test_forecaster_runtime.py  test_futures_encoder_wired.py  test_futures_window_builder.py  test_inference.py  test_kalman_trend.py  test_label_script.py  test_management_loop.py  test_market_world.py  test_memory_monitors.py  test_meta_label_head.py  (+39 more)
(+181 files in other folders)
